# pianola

./: pyproject.toml  pyrightconfig.json
src/pianola/analyse/: __init__.py
src/pianola/analyse/sqlite/: __init__.py  column.py  index.py  table.py  utils.py  views.py
src/pianola/analyse/whoosh/: __init__.py
src/pianola/cmd/: __init__.py  __main__.py
src/pianola/generate/: __init__.py
src/pianola/generate/sqlite/: __init__.py  converters.py  query.py  table.py  utils.py  view.py
src/pianola/generate/whoosh/: __init__.py  index.py
src/pianola/lib/: stringutils.py  writer.py
src/pianola/lib/pytypes/: sql.py
src/pianola/lib/schema/: __init__.py  whoosh.py
src/pianola/lib/schema/sql/: __init__.py  column.py  index.py  query.py  schema.py  table.py  view.py
tests/: test_sqlite.py  test_whoosh.py
tests/schemas/: abitofeverything.sql
