[tool.poetry]
name = "pianola"
version = "0.1.0"
description = ""
authors = ["Dominic Price <dominicprice@outlook.com>"]
readme = "README.md"
packages = [{include = "pianola", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlglot = "^18.3.0"
stringcase = "^1.2.0"
inflect = "^7.0.0"
whoosh = "^2.7.4"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pysqlite3-binary = "^0.5.1"

[tool.poetry.scripts]
pianola = "pianola.cmd:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
